# tilus

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTOR_CONTEXT.md  REPORT.md  TASK.md  index.html  pyproject.toml  setup.py  versions.json
.claude/skills/: ncu-report.md
.claude/skills/ncu-report/: SKILL.md
.claude/skills/write-docs/: SKILL.md
.github/: copy-pr-bot.yaml
.github/actions/build-wheel/: action.yaml
.github/actions/install-hidet/: action.yaml
.github/actions/install-tilus/: action.yaml
.github/actions/setup-environment/: action.yaml
.github/workflows/: deploy-docs.yaml  deploy-wheel-to-pypi.yaml  docs.yaml  format-and-lint.yaml  tests-temporary.yaml  tests.yaml
.github/workflows/scripts/: check-format-and-lint.sh  run-examples.sh  update_gh_pages.py
ci/: format-and-lint.sh
ci/git-hooks/: pre-commit  pre-push  setup.sh
demos/demo_copy_async_tensor/: main.py
docs/: Makefile  README.md  autobuild.sh  serve.sh
docs/source/: conf.py  index.rst  install.rst
docs/source/_ext/: github_link.py
docs/source/_templates/: versioning.html
docs/source/getting-started/: install.rst  matmul.rst
docs/source/programming-guides/: autotuning.rst  cache.rst  control-flow.rst  instructions.rst  low-precision-support.rst  overview.rst  thread-group.rst  tilus-script.rst
docs/source/python-api/: attrs.rst  tilus-lang-attributes.rst  tilus-option.rst  tilus-script.rst  tilus-target.rst  tilus.rst
examples/: pyproject.toml  requirements.txt
examples/attention/: flash_attention.py  flash_attention_v1.py  flash_attention_v2.py  flash_attention_v3.py
examples/attention_with_kvcache/: attention_v1.py
examples/blackwell_matmul/: README.md  benchmark.py  matmul_v0.py  matmul_v1.py  matmul_v2.py  matmul_v3-back.py  matmul_v3.py  matmul_v4.py  matmul_v5.py  matmul_v6.py  matmul_v7.py  matmul_v7_claude.py  matmul_v7_clc.py  matmul_v8.py  matmul_v9.py  nvfp4_matmul.py
examples/blackwell_matmul_fp8xfp4/: README.md  mma_fp8xfp4.py
examples/blackwell_matmul_nvfp4/: README.md  matmul_v0.py
examples/dsv3_indexer/: README.md  baseline.py  benchmark.py  report.md  requirements.txt  setup_deep_gemm.sh  tilus_kernel.py  tilus_topk.py
examples/flash_attention_decode/: main.py  tilus_kernel.py  torch_kernel.py  triton_kernel.py
examples/hopper_matmul/: benchmark.py  matmul_tma.py  matmul_v0.py  matmul_v1.py  matmul_v2.py  matmul_v3.py  matmul_v4.py  matmul_v5.py  matmul_wgmma.py
examples/matmul/: matmul_v0.py  matmul_v1.py  matmul_v2.py  matmul_v3.py  matmul_v4.py  matmul_v5.py  matmul_v6.py  matmul_v7.py  matmul_v8.py
examples/norm/: layer_norm.py
examples/quantization/: matmul_a16wx.py  per_token_cast.py  swiglu_forward_and_per_token_cast.py
examples/softmax/: softmax.py
examples/vector_add/: vector_add.py
experiments/: test_r16x256b_cta_group2.py  test_r16x256b_multicta.py  test_stmatrix_addr.py  test_stmatrix_hw.cu  test_tcgen05_ld_r16x256b.py
experiments/demo_copy_async_tensor_multicast/: main.py
include/tilus/cuda/: common.cuh
knowledge/: footgun_during_mitigation.md
latest/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
latest/.doctrees/: environment.pickle  index.doctree
latest/.doctrees/getting-started/: install.doctree
latest/.doctrees/programming-guides/: autotuning.doctree  cache.doctree  control-flow.doctree  instructions.doctree  overview.doctree  thread-group.doctree  tilus-script.doctree
latest/.doctrees/python-api/: tilus-option.doctree  tilus-script.doctree  tilus.doctree
latest/_downloads/0156933189acbafc92b2eb53f0cddc43/: matmul_v1.py
latest/_downloads/0bd71a2568360b848aabe44fae6c21bc/: matmul_v0.py
latest/_modules/: index.html
latest/_modules/tilus/: option.html  target.html
latest/_sources/: index.rst
latest/_sources/getting-started/: install.rst
latest/_sources/programming-guides/: autotuning.rst  (+1 more)
latest/getting-started/: install.html
latest/programming-guides/: autotuning.html  cache.html  control-flow.html  instructions.html  overview.html  thread-group.html  tilus-script.html
latest/python-api/: attrs.html  tilus-class.html  tilus-option.html  tilus-script.html  tilus-target.html  tilus.html
python/tilus/: __init__.py  drivers.py  logging.py  option.py  target.py  tensor.py  version.py
scripts/: add-copyright.py  baseline_softmax.py  format-and-lint.sh  lock-gpu-clocks.py  run-examples.sh  sign-commits.py  sign-commits.sh
scripts/lint/: check-commit-signature.py  check-copyright-header.py  format-and-lint.sh  lock-gpu-clocks.py
stable/: search.html  searchindex.js
stable/_modules/: index.html
stable/_sources/: index.rst
stable/programming-guides/: autotuning.html  cache.html  control-flow.html  tilus-script.html
tests/: conftest.py  marks.py
tests/docs/: test_layout_demo_js.py
tests/drivers/: test_hello_world.py
tests/examples/: test_examples.py
tests/instructions/: test_atomic.py  test_cluster_launch_control.py  test_copy_async_bulk.py  test_copy_async_tensor.py  test_mbarrier.py  test_print_tensor.py  test_random.py  test_reduce.py  test_scan.py  test_shared_memory_addressing.py  test_simple_mma_matmul.py  test_sync.py  test_tcgen05_alloc_free.py  test_tcgen05_copy.py  test_tcgen05_load_store.py  test_tcgen05_mma.py  test_tcgen05_scaled_mma.py  test_tcgen_alloc_free.py  test_tcgen_load_store.py  test_where.py
tests/ir/: test_targets.py
tests/kernels/: test_cast.py  test_pingpong.py
tests/lang/: demo_bulk_copy_async.py  demo_copy_async_tensor.py  demo_shared_memory_addressing.py  demo_thread_group.py  test_blocks_per_cluster.py  test_bulk_copy_async.py  test_copy_async_bulk.py  test_copy_async_tensor.py  test_copy_example.py  test_load_store_global.py  test_mbarrier.py  test_shared_memory_addressing.py  test_simple_mma_matmul.py  test_thread_group.py
tests/transforms/: test_dead_code_elimination.py
v0.2.0/: index.html
v0.2.0/getting-started/: install.html
v0.2.0/programming-guides/: instructions.html  thread-group.html
v0.2.0/python-api/: tilus-script.html
(+821 files in other folders)
