[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tilus"
description = "Tilus"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["GPU", "Compiler", "CUDA", "hidet", "tensor", "torch"]
authors = [
    { name = "Hidet Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "apache-tvm-ffi",
    "hidet==0.6.1",
    "torch",
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.0",
    "mypy==1.15.0",
    "pytest",
    "pre-commit",
    "types-tabulate",
    "types-tqdm",
    "pandas",
    "nvidia-ml-py",  # for locking GPU clocks

    # for examples
    "einops",

    # for documentation
    "jinja2",
    "sphinx",
    "sphinx-gallery",
    "sphinx-copybutton",
    "autodocsumm",
    "sphinx-book-theme==1.1.4",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/NVIDIA/tilus"
Documentation = "https://nvidia.github.io/tilus"

[tool.setuptools_scm]

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.package-data]
"tilus.extensions.hidet" = ["include/**/*.h"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "D", # enforce docstring conventions
    "I", # isort rules that unify the import order
]
ignore = [
    "E741",  # ambiguous variable name
    "D106",  # missing docstring in nested class
    "D105",  # missing docstring in magic method
    "D104",  # missing docstring in public package
    "D103",  # missing docstring in public function
    "D102",  # missing docstring in public method
    "D101",  # missing docstring in public class
    "D100",  # missing docstring in public module
    "D401",  # first line should be in imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/**/*.py" = ["D400"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
allow_redefinition = true
strict_optional = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tilus.*"]
disable_error_code = [
    # we disable this error code because we heavily used a pattern like
    # class EmitterBase:
    #     def emit(self, inst: Instruction):
    #         ...
    # class PrintEmitter(EmitterBase):
    #     def emit(self, inst: PrintInst):  # type: ignore[override]
    #         ...
    "override",
]

[[tool.mypy.overrides]]
module = ["examples.*", "tests.*"]
disable_error_code = ["override", "valid-type", "call-arg", "no-untyped-def", "has-type", "no-redef"]

[[tool.mypy.overrides]]
module = ["hidet.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["cuda.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tilus.extensions.hidet.ir.primitives.*"]
disable_error_code = ["operator", "index"]

[[tool.mypy.overrides]]
module = [
    "tilus.ir.builders.func_builder",  # todo: update the defintion of threadIx etc to enable this checking
    "tilus.backends.emitters.cast",  # todo: update the FloatType to add mantissa_nbits and exponent_nbits
    "tilus.backends.codegen"
]
disable_error_code = ["attr-defined"]

[tool.pyright]
typeCheckingMode = "basic"
reportInvalidTypeForm = "none" # we allow complex type annotations in Tilus Script
reportIncompatibleMethodOverride = "none"
